added powerups foundation

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title></title>
     <script src="pixi.min.js"></script>   
 </head>
-<body>
+<body style="text-align: center; background-color: darkgrey">
+    <script src="powerups.js"></script>
     <script src="physics.js"></script>
     <script src="balls.js"></script>
     <script src="blocks.js"></script>
